--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-number-format": "^5.1.3",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
