--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.1",
     "react-number-format": "^5.1.3",
     "typescript": "4.9.5",
